--- a/RegistarPacijenataUWP/RegistarPacijenataUWP.csproj
+++ b/RegistarPacijenataUWP/RegistarPacijenataUWP.csproj
@@ -98,6 +98,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MsgBox.cs" />
     <Compile Include="Pacijent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
